--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-parcelize'
+
 }
 
 android {
@@ -103,6 +105,9 @@ dependencies {
 
     // Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
+
+    //ViewPager2
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
 }
 
 kapt {
