--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
 
     //ViewPager2
     implementation("androidx.viewpager2:viewpager2:1.0.0")
+
+    //splash screen
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 }
 
 kapt {
